[project]
authors = [{name = "Profluent Team"}]
maintainers = [{name = "Sarthak Jain", email = "sjain@profluent.bio"}]
name = "E1"
requires-python = ">=3.10"
version = "1.0.0"

dependencies = [
    "hatchling",
    "transformers",
    "tokenizers",
    "kernels",
    "click",
    "pandas",
    "polars",
    "tqdm",
    "biotite",
    "psutil",
    "scipy",
    "einops",
    "torch>=2.4.1"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/E1"]

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
